[project]
name = 'aoc2025'
description = 'Advent of Code 2025 solutions'
readme = 'README.md'
license = 'MIT'
version = 'v0.0.1'

[project.optional-dependencies]
dev = ['ruff', 'faterunner']

[project.urls]
Homepage = 'https://github.com/sakhezech/aoc2025'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.faterunner.targets]
check = ['ruff check .', 'ruff format --check .']
format = ['ruff check --fix .', 'ruff format .']

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
